Logger should use makeString instead of String::format https://bugs.webkit.org/show_bug.cgi?id=176035

Reviewed by Jer Noble.

Source/WebCore/PAL:

* pal/Logger.h:
(PAL::LogArgument::toString):
(PAL::Logger::logAlways):
(PAL::Logger::error):
(PAL::Logger::warning):
(PAL::Logger::notice):
(PAL::Logger::info):
(PAL::Logger::debug):
(PAL::Logger::MethodAndPointer::MethodAndPointer):
(PAL::Logger::log):
(PAL::LogArgument<Logger::MethodAndPointer>::toString):

Tools:

* TestWebKitAPI/Tests/WebCore/Logging.cpp:
(TestWebKitAPI::TEST_F): Update test.


Canonical link: https://commits.webkit.org/192717@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@221288 268f45cc-cd09-0410-ab3c-d52691b4dbfc