Source/WebCore/PAL/pal/Logger.h
@@ -20,18 +20,30 @@
  * PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON ANY THEORY
  * OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT
  * (INCLUDING NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE
- * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE. 
+ * OF THIS SOFTWARE, EVEN IF ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.
  */
 
 #pragma once
 
 #include <wtf/Assertions.h>
+#include <wtf/HexNumber.h>
 #include <wtf/Noncopyable.h>
 #include <wtf/RefCounted.h>
 #include <wtf/RefPtr.h>
+#include <wtf/text/StringBuilder.h>
 #include <wtf/text/WTFString.h>
 
 namespace PAL {
+
+template<typename T>
+struct LogArgument {
+    template<typename U = T> static typename std::enable_if<std::is_same<U, int>::value, String>::type toString(int argument) { return String::number(argument); }
+    template<typename U = T> static typename std::enable_if<std::is_same<U, float>::value, String>::type toString(float argument) { return String::number(argument); }
+    template<typename U = T> static typename std::enable_if<std::is_same<U, double>::value, String>::type toString(double argument) { return String::number(argument); }
+    template<typename U = T> static typename std::enable_if<std::is_same<U, String>::value, String>::type toString(String argument) { return argument; }
+    template<typename U = T> static typename std::enable_if<std::is_same<U, const char*>::value, String>::type toString(const char* argument) { return String(argument); }
+    template<size_t length> static String toString(const char (&argument)[length]) { return String(argument); }
+};
 
 class Logger : public RefCounted<Logger> {
     WTF_MAKE_NONCOPYABLE(Logger);
@@ -42,64 +54,63 @@ public:
     }
 
     template<typename... Arguments>
-    inline void logAlways(WTFLogChannel& channel, const char* format, const Arguments&... arguments) const WTF_ATTRIBUTE_PRINTF(3, 0)
+    inline void logAlways(WTFLogChannel& channel, const Arguments&... arguments)
     {
 #if RELEASE_LOG_DISABLED
         // "Standard" WebCore logging goes to stderr, which is captured in layout test output and can generally be a problem
         //  on some systems, so don't allow it.
         UNUSED_PARAM(channel);
-        UNUSED_PARAM(format);
 #else
         if (!willLog(channel, WTFLogLevelAlways))
             return;
 
-        log(channel, format, arguments...);
+        log(channel, arguments...);
 #endif
     }
 
     template<typename... Arguments>
-    inline void error(WTFLogChannel& channel, const char* format, const Arguments&... arguments) const WTF_ATTRIBUTE_PRINTF(3, 0)
+    inline void error(WTFLogChannel& channel, const Arguments&... arguments)
     {
         if (!willLog(channel, WTFLogLevelError))
             return;
 
-        log(channel, format, arguments...);
+        log(channel, arguments...);
     }
 
     template<typename... Arguments>
-    inline void warning(WTFLogChannel& channel, const char* format, const Arguments&... arguments) const WTF_ATTRIBUTE_PRINTF(3, 0)
+    inline void warning(WTFLogChannel& channel, const Arguments&... arguments)
     {
         if (!willLog(channel, WTFLogLevelWarning))
             return;
 
-        log(channel, format, arguments...);
+        log(channel, arguments...);
     }
 
     template<typename... Arguments>
-    inline void notice(WTFLogChannel& channel, const char* format, const Arguments&... arguments) const WTF_ATTRIBUTE_PRINTF(3, 0)
+    inline void notice(WTFLogChannel& channel, const Arguments&... arguments)
     {
         if (!willLog(channel, WTFLogLevelNotice))
             return;
 
-        log(channel, format, arguments...);
+        log(channel, arguments...);
     }
 
     template<typename... Arguments>
-    inline void info(WTFLogChannel& channel, const char* format, const Arguments&... arguments) const WTF_ATTRIBUTE_PRINTF(3, 0)
+    inline void info(WTFLogChannel& channel, const Arguments&... arguments)
     {
         if (!willLog(channel, WTFLogLevelInfo))
             return;
 
-        log(channel, format, arguments...);
+        log(channel, arguments...);
     }
 
     template<typename... Arguments>
-    inline void debug(WTFLogChannel& channel, const char* format, const Arguments&... arguments) const WTF_ATTRIBUTE_PRINTF(3, 0)
+    inline void debug(WTFLogChannel& channel, const Arguments&... arguments)
     {
         if (!willLog(channel, WTFLogLevelDebug))
             return;
 
-        log(channel, format, arguments...);
+        log(channel, arguments...);
     }
 
     inline bool willLog(WTFLogChannel& channel, WTFLogLevel level) const
@@ -121,34 +132,47 @@ public:
             m_enabled = enabled;
     }
 
+    struct MethodAndPointer {
+        MethodAndPointer(const char* methodName, void* objectPtr)
+            : methodName(methodName)
+            , objectPtr(reinterpret_cast<uintptr_t>(objectPtr))
+        {
+        }
+
+        const char* methodName;
+        uintptr_t objectPtr;
+    };
+
 private:
     Logger(const void* owner) { m_owner = owner; }
 
-    static inline void log(WTFLogChannel& channel, const char* format, ...)
+    template<typename... Argument>
+    static inline void log(WTFLogChannel& channel, const Argument&... arguments)
     {
-        va_list arguments;
-        va_start(arguments, format);
-
-#if COMPILER(GCC_OR_CLANG)
-#pragma GCC diagnostic push
-#pragma GCC diagnostic ignored "-Wformat-nonliteral"
-#endif
-        String string = String::formatWithArguments(format, arguments);
-#if COMPILER(GCC_OR_CLANG)
-#pragma GCC diagnostic pop
-#endif
+        String string = makeString(LogArgument<Argument>::toString(arguments)...);
 
 #if RELEASE_LOG_DISABLED
         WTFLog(&channel, "%s", string.utf8().data());
 #else
         os_log(channel.osLogChannel, "%{public}s", string.utf8().data());
 #endif
-
-        va_end(arguments);
     }
 
     const void* m_owner;
     bool m_enabled { true };
+};
+
+template <>
+struct LogArgument<Logger::MethodAndPointer> {
+    static String toString(const Logger::MethodAndPointer& value)
+    {
+        StringBuilder builder;
+        builder.append(value.methodName);
+        builder.appendLiteral("(0x");
+        appendUnsigned64AsHex(value.objectPtr, builder);
+        builder.appendLiteral(") ");
+        return builder.toString();
+    }
 };
 
 } // namespace PAL
